--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,8 +7,7 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 
     "paths": {
-      "@/*": ["./src/*"],
-      "@pages/*": ["./src/pages/*"]
+      "@/*": ["./src/*"]
     }
   }
 }
